force-app/main/default/objects/HF_RecommendationScore__mdt/HF_RecommendationScore__mdt.object-meta.xml
<CustomObject>
    <label>HF Recommendation Score</label>
    <pluralLabel>HF Recommendation Scores</pluralLabel>
    <description>Business-configurable scoring rules for HF Saathi insurance and premium recommendations. Each record defines conditions (age, income, segment, life stage) and a base score. The recommendation engine reads these at runtime so the business team can tune recommendations without code changes.</description>
</CustomObject>