force-app/main/default/objects/HF_RecommendationScore__mdt/fields/Base_Score__c.field-meta.xml
<CustomField>
    <fullName>Base_Score__c</fullName>
    <label>Base Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Base recommendation score (0-100) when all conditions match. Higher score = higher recommendation priority. Business team adjusts this to control which products surface first.</description>
</CustomField>