force-app/main/default/objects/HF_RecommendationScore__mdt/fields/Family_Segment__c.field-meta.xml
<CustomField>
    <fullName>Family_Segment__c</fullName>
    <label>Family Segment</label>
    <type>Text</type>
    <length>50</length>
    <description>Family segment this rule targets. Values: High Value, Growth, At-Risk, All. Matches Account.Family_Segment__c.</description>
</CustomField>