force-app/main/default/objects/HF_RecommendationScore__mdt/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <label>Insurance Type</label>
    <type>Text</type>
    <length>100</length>
    <description>Insurance product type this rule applies to. Values: Term Life, Health, Child Education, Retirement Plan, or ALL for any type.</description>
</CustomField>