force-app/main/default/objects/HF_RecommendationScore__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Uncheck to disable this scoring rule without deleting it. Only active rules are used by the recommendation engine.</description>
</CustomField>