force-app/main/default/objects/HF_RecommendationScore__mdt/fields/Life_Stage__c.field-meta.xml
<CustomField>
    <fullName>Life_Stage__c</fullName>
    <label>Life Stage</label>
    <type>Text</type>
    <length>200</length>
    <description>Comma-separated life stages where this rule applies. Values: Student,Working,Married,Parent,Retired,All. Matches Contact.Life_Stage__c.</description>
</CustomField>