force-app/main/default/objects/HF_RecommendationScore__mdt/fields/Max_Age__c.field-meta.xml
<CustomField>
    <fullName>Max_Age__c</fullName>
    <label>Max Age</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Maximum customer age (inclusive) for this scoring rule to apply. Set 999 for no maximum.</description>
</CustomField>