force-app/main/default/objects/HF_RecommendationScore__mdt/fields/Min_Age__c.field-meta.xml
<CustomField>
    <fullName>Min_Age__c</fullName>
    <label>Min Age</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Minimum customer age (inclusive) for this scoring rule to apply. Set 0 for no minimum.</description>
</CustomField>