force-app/main/default/objects/HF_RecommendationScore__mdt/fields/Min_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Min_Annual_Income__c</fullName>
    <label>Min Annual Income</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Minimum annual income (INR) for this rule to apply. Set 0 for no minimum.</description>
</CustomField>