force-app/main/default/objects/HF_RecommendationScore__mdt/fields/Priority_Order__c.field-meta.xml
<CustomField>
    <fullName>Priority_Order__c</fullName>
    <label>Priority Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Tie-breaker when two rules have the same score. Lower number = shown first. Set 1 for highest priority products.</description>
</CustomField>