force-app/main/default/objects/HF_RecommendationScore__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <type>Text</type>
    <length>50</length>
    <description>Specific product code from Product2_ExternalOrgSF__dlm this rule applies to. Leave blank to apply to all products of the Insurance Type.</description>
</CustomField>