force-app/main/default/objects/HF_RecommendationScore__mdt/fields/Recommendation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Reason__c</fullName>
    <label>Recommendation Reason</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Template for why this product is recommended. Used by HF Saathi to explain the recommendation to the customer in a personal, human way. Supports placeholders like {customerName}, {age}, {lifeStage}.</description>
</CustomField>